--- a/dataanal.ipynb
+++ b/dataanal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>05/12</td>\n",
+       "      <td>12/05</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
@@ -48,7 +48,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>05/12</td>\n",
+       "      <td>12/05</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
@@ -58,7 +58,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>05/12</td>\n",
+       "      <td>12/05</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
@@ -68,7 +68,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>05/12</td>\n",
+       "      <td>12/05</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
@@ -78,7 +78,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>05/12</td>\n",
+       "      <td>12/05</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
@@ -98,7 +98,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>29/11</td>\n",
+       "      <td>11/29</td>\n",
        "      <td>700</td>\n",
        "      <td>780</td>\n",
        "      <td>Иностранный язык</td>\n",
@@ -108,7 +108,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>29/11</td>\n",
+       "      <td>11/29</td>\n",
        "      <td>700</td>\n",
        "      <td>780</td>\n",
        "      <td>Иностранный язык</td>\n",
@@ -118,7 +118,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>29/11</td>\n",
+       "      <td>11/29</td>\n",
        "      <td>700</td>\n",
        "      <td>780</td>\n",
        "      <td>Иностранный язык</td>\n",
@@ -128,7 +128,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>29/11</td>\n",
+       "      <td>11/29</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
        "      <td>География</td>\n",
@@ -138,7 +138,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>29/11</td>\n",
+       "      <td>11/29</td>\n",
        "      <td>880</td>\n",
        "      <td>960</td>\n",
        "      <td>Кыргызский язык продвинутый уровень</td>\n",
@@ -152,36 +152,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      date  start  end                                     subject  \\\n",
-       "0    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
-       "1    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
-       "2    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
-       "3    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
-       "4    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
-       "..     ...    ...  ...                                         ...   \n",
-       "995  29/11    700  780                            Иностранный язык   \n",
-       "996  29/11    700  780                            Иностранный язык   \n",
-       "997  29/11    700  780                            Иностранный язык   \n",
-       "998  29/11    790  870                                   География   \n",
-       "999  29/11    880  960         Кыргызский язык продвинутый уровень   \n",
+       "      date  start  end                                     subject      class  \\\n",
+       "0    12/05    790  870  Линейная алгебра и аналитическая геометрия   DHT-1-20   \n",
+       "1    12/05    790  870  Линейная алгебра и аналитическая геометрия   DHT-2-20   \n",
+       "2    12/05    790  870  Линейная алгебра и аналитическая геометрия   EHI-1-20   \n",
+       "3    12/05    790  870  Линейная алгебра и аналитическая геометрия  SEST-1-20   \n",
+       "4    12/05    790  870  Линейная алгебра и аналитическая геометрия  SFHT-1-20   \n",
+       "..     ...    ...  ...                                         ...        ...   \n",
+       "995  11/29    700  780                            Иностранный язык   MIX-1-22   \n",
+       "996  11/29    700  780                            Иностранный язык  SEST-3-22   \n",
+       "997  11/29    700  780                            Иностранный язык   MIX-1-22   \n",
+       "998  11/29    790  870                                   География  SEST-3-22   \n",
+       "999  11/29    880  960         Кыргызский язык продвинутый уровень  SEST-3-22   \n",
        "\n",
-       "          class                teacher classroom  \n",
-       "0      DHT-1-20           Елена Бурова      LAB1  \n",
-       "1      DHT-2-20           Елена Бурова      LAB1  \n",
-       "2      EHI-1-20           Елена Бурова      LAB1  \n",
-       "3     SEST-1-20           Елена Бурова      LAB1  \n",
-       "4     SFHT-1-20           Елена Бурова      LAB1  \n",
-       "..          ...                    ...       ...  \n",
-       "995    MIX-1-22       Наталья Цуканова        C5  \n",
-       "996   SEST-3-22  Гульмира Молдомусаева        C8  \n",
-       "997    MIX-1-22  Гульмира Молдомусаева        C8  \n",
-       "998   SEST-3-22       Чолпон Джусупова        C5  \n",
-       "999   SEST-3-22         Бурул Шамбаева        C5  \n",
+       "                   teacher classroom  \n",
+       "0             Елена Бурова      LAB1  \n",
+       "1             Елена Бурова      LAB1  \n",
+       "2             Елена Бурова      LAB1  \n",
+       "3             Елена Бурова      LAB1  \n",
+       "4             Елена Бурова      LAB1  \n",
+       "..                     ...       ...  \n",
+       "995       Наталья Цуканова        C5  \n",
+       "996  Гульмира Молдомусаева        C8  \n",
+       "997  Гульмира Молдомусаева        C8  \n",
+       "998       Чолпон Джусупова        C5  \n",
+       "999         Бурул Шамбаева        C5  \n",
        "\n",
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "{'C1', 'C10', 'C3', 'C4', 'C7', 'C8', 'C9', 'CH', 'LAB2', 'MR'}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,8 +306,7 @@
     "    f.close()\n",
     "# set(now(df)[\"classroom\"])\n",
     "\n",
-    "# df[df[\"date\"]]\n",
-    "auditories\n"
+    "auditories"
    ]
   },
   {
@@ -339,7 +338,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5375c6fca34c5f00efc2a1fb12328b4af153b74c7751f4a701371fb63dcb16d8"
+    "hash": "0cb1f4c61e00a4630e095d7db81d372b37b525937944a6ef204cd75fca061c20"
    }
   }
  },
